--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "next-themes": "latest",
+    "quill": "^2.0.3",
     "react": "^18",
     "react-day-picker": "latest",
     "react-dom": "^18",
