--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "embla-carousel-react": "latest",
     "input-otp": "latest",
     "lucide-react": "^0.454.0",
+    "motion": "^12.18.1",
     "next": "14.2.16",
     "next-themes": "latest",
     "quill": "^2.0.3",
